force-app/main/default/objects/Egg_Sample__c/Egg_Sample__c.object-meta.xml
<CustomObject>
    <label>Egg Cohort</label>
    <nameField>
        <displayFormat>EGG-{0000}</displayFormat>
        <label>Egg Cohort Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Egg Cohorts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>