force-app/main/default/objects/Egg_Sample__c/fields/Abn__c.field-meta.xml
<CustomField>
    <fullName>Abn__c</fullName>
    <label>Abn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>