force-app/main/default/objects/Egg_Sample__c/fields/Abn_Summary__c.field-meta.xml
<CustomField>
    <fullName>Abn_Summary__c</fullName>
    <label>Abn Summary</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>Abn</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>