force-app/main/default/objects/Egg_Sample__c/fields/Age_Of_Egg_Provider_at_OPU__c.field-meta.xml
<CustomField>
    <fullName>Age_Of_Egg_Provider_at_OPU__c</fullName>
    <label>Age Of Egg Provider at OPU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>