force-app/main/default/objects/Egg_Sample__c/fields/Donor_Owner__c.field-meta.xml
<CustomField>
    <fullName>Donor_Owner__c</fullName>
    <label>Donor / Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Egg Cohorts</relationshipLabel>
    <relationshipName>Egg_Samples</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>