force-app/main/default/objects/Egg_Sample__c/fields/Egg_Available_For_Insemination__c.field-meta.xml
<CustomField>
    <fullName>Egg_Available_For_Insemination__c</fullName>
    <label>Egg Available For Insemination</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>