force-app/main/default/objects/Egg_Sample__c/fields/Egg_Available_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Egg_Available_Rollup__c</fullName>
    <label>Egg Available Rollup</label>
    <summaryFilterItems>
        <field>Egg__c.Fate__c</field>
        <operation>notEqual</operation>
        <value>Consumed, Frozen, Discarded, Transported</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>