force-app/main/default/objects/Egg_Sample__c/fields/Egg_Cohort_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Egg_Cohort_Consumed__c</fullName>
    <formula>IF( Eggs_Currently_Frozen__c &gt;0|| Egg_Available_For_Insemination__c &gt;0,False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Egg Cohort Consumed</label>
    <type>Checkbox</type>
</CustomField>