force-app/main/default/objects/Egg_Sample__c/fields/Eggs_Collected__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Collected__c</fullName>
    <label># Eggs Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>