force-app/main/default/objects/Egg_Sample__c/fields/Eggs_Currently_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Currently_Frozen__c</fullName>
    <label>Eggs Currently Frozen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>