force-app/main/default/objects/Egg_Sample__c/fields/Eggs_Denuded_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Denuded_Rollup__c</fullName>
    <label>Eggs Denuded Rollup</label>
    <summaryFilterItems>
        <field>Egg__c.Denuded__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>