force-app/main/default/objects/Egg_Sample__c/fields/Eggs_for_Insemination__c.field-meta.xml
<CustomField>
    <fullName>Eggs_for_Insemination__c</fullName>
    <formula>MI__c + MII__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eggs for Insemination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>