force-app/main/default/objects/Egg_Sample__c/fields/Eggs_Not_Denuded__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Not_Denuded__c</fullName>
    <label>Eggs Not Denuded</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>