force-app/main/default/objects/Egg_Sample__c/fields/Frozen__c.field-meta.xml
<CustomField>
    <fullName>Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frozen</label>
    <type>Checkbox</type>
</CustomField>