force-app/main/default/objects/Egg_Sample__c/fields/Goblet_Colour__c.field-meta.xml
<CustomField>
    <fullName>Goblet_Colour__c</fullName>
    <label>Goblet Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>