force-app/main/default/objects/Egg_Sample__c/fields/MI_Rollup__c.field-meta.xml
<CustomField>
    <fullName>MI_Rollup__c</fullName>
    <label>MI Rollup</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>MI</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>