force-app/main/default/objects/Egg_Sample__c/fields/MII__c.field-meta.xml
<CustomField>
    <fullName>MII__c</fullName>
    <label>MII</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>