force-app/main/default/objects/Egg_Sample__c/fields/MII_Rollup__c.field-meta.xml
<CustomField>
    <fullName>MII_Rollup__c</fullName>
    <label>MII Rollup</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>MII</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>