force-app/main/default/objects/Egg_Sample__c/fields/No_Oocyte_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>No_Oocyte_Roll_Up__c</fullName>
    <label>No Oocyte Roll Up</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>No Oocyte</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>