force-app/main/default/objects/Egg_Sample__c/fields/Reserved_for__c.field-meta.xml
<CustomField>
    <fullName>Reserved_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Egg Cohorts</relationshipLabel>
    <relationshipName>Egg_Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>