force-app/main/default/objects/Egg_Sample__c/fields/RZ_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>RZ_Roll_up__c</fullName>
    <label>RZ Roll up</label>
    <summaryFilterItems>
        <field>Egg__c.Grade__c</field>
        <operation>equals</operation>
        <value>RZ</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>