force-app/main/default/objects/Egg_Sample__c/fields/Total_Number_Currently_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Currently_Frozen__c</fullName>
    <label>Total Number Currently Frozen</label>
    <summaryFilterItems>
        <field>Egg__c.Fate__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </summaryFilterItems>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>