force-app/main/default/objects/Egg_Sample__c/fields/Total_Number_of_Eggs_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Eggs_Collected__c</fullName>
    <label>Total Number of Eggs Collected</label>
    <summaryForeignKey>Egg__c.Egg_Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>