force-app/main/default/objects/Egg_Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location_Lookup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Eggs_Collected__c</columns>
    <columns>Egg_Available_Rollup__c</columns>
    <columns>Total_Number_Currently_Frozen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Number_Currently_Frozen__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>