force-app/main/default/objects/Egg_Sample__c/listViews/All_Storage.listView-meta.xml
<ListView>
    <fullName>All_Storage</fullName>
    <columns>NAME</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location_Lookup__c</columns>
    <columns>Eggs_Currently_Frozen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Number_Currently_Frozen__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Storage</label>
</ListView>