force-app/main/default/objects/Egg_Sample__c/listViews/Egg_Transport_List.listView-meta.xml
<ListView>
    <fullName>Egg_Transport_List</fullName>
    <columns>NAME</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location_Lookup__c</columns>
    <columns>Total_Number_Currently_Frozen__c</columns>
    <columns>Freeze_Media__c</columns>
    <columns>Goblet_Colour__c</columns>
    <columns>Device_Colour__c</columns>
    <columns>Device_Type__c</columns>
    <columns>Age_Of_Egg_Provider_at_OPU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Number_Currently_Frozen__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Donor_Owner__c</field>
        <operation>equals</operation>
        <value>dana nipperess</value>
    </filters>
    <label>Transport Report for External Clinics</label>
</ListView>