force-app/main/default/objects/Egg_Sample__c/listViews/Eggs_in_Storage_Greater_than_5_Years.listView-meta.xml
<ListView>
    <fullName>Eggs_in_Storage_Greater_than_5_Years</fullName>
    <columns>NAME</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location_Lookup__c</columns>
    <columns>Eggs_Currently_Frozen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Number_Currently_Frozen__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Eggs in Storage Greater than 5 Years</label>
</ListView>